--- a/filecontents-api/src/main/docker/Dockerfile.legacy-jar
+++ b/filecontents-api/src/main/docker/Dockerfile.legacy-jar
@@ -102,6 +102,10 @@ ENV LANGUAGE='en_US:en'
 COPY target/lib/* /deployments/lib/
 COPY target/*-runner.jar /deployments/quarkus-run.jar
 
+ENV FILE_PATH=/etc/files
+COPY --chown=185 files/ /etc/files
+
+
 EXPOSE 8080
 USER 185
 ENV JAVA_OPTS="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
